fix: hide ace-menu on mobile

--- a/src/scss/03_elements/_elements.code.scss
+++ b/src/scss/03_elements/_elements.code.scss
@@ -109,3 +109,7 @@
 
   height: auto !important;
 }
+
+.ace_mobile-menu {
+  display: none !important;
+}
